--- a/src/content/projects/.project-3.md
+++ b/src/content/projects/.project-3.md
@@ -1,5 +1,6 @@
 ---
 title: The Life of Fathers
+role: Producer
 type: Documentary
 description: |
   The Life of Fathers by Dutch photographer Marwan Magroun
